*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166177 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_en.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_en.properties
@@ -46,6 +46,10 @@ extra_leaderseat = Leatherseats
 discount_0 = I want no rebate
 discount_1 = I want an aggregated rebate
 discount_2 = I want a corporate client rebate
+discount_2_0 = BeachBoys are great
+discount_2_1 = Red Hot Chillis are better
+radio_hint = This Radio is a myfaces extension - you can use html code here!
+
 
 
 
