*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166184 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -10,6 +10,7 @@ Changes in Release 0.4.4
 * added RadioRenderer & selectone_radio tag (see carconfigurator example)
 * new hack to make MyFaces more compatible (tags that extend UIComponentTag
   directly should work better)
+* replaced the proprietary logging by jakarta commons logging
 
 ----------------------------------------------------------------------
 Changes in Release 0.4.3
