*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166187 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -10,6 +10,7 @@ Changes in Release 0.4.4
 * replaced the proprietary logging by jakarta commons logging
 * convert/impl/DateConverter now parses with the "formatPattern" of the component
   if all other parsing attempts fail
+* hyperlink-attributes where added to sortcolumn
 
 ----------------------------------------------------------------------
 Changes in Release 0.4.3
