--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
@@ -47,6 +47,9 @@ discount_0 = Ich will keinen Rabatt
 discount_1 = Ich will den Treuerabatt
 discount_2 = Ich will den Groﬂkundenrabatt
 radio_hint = This Radio is a myfaces extension - you can use html code here!
+sort_cartype = Typ
+sort_carcolor = Farbe
+
 
 
 
