--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -1,6 +1,13 @@
 MyFaces Release Notes
 =====================
-       
+
+----------------------------------------------------------------------
+Changes in Release 0.9.0
+* Many, many changes to catch up with current Spec. 1.0 Proposed Final Draft
+* "myfaces_WrapPageContext" config parameter abandoned (does not work with all
+  JSP containers and is obsoltete with Tomcat 5)
+* "myfaces_DefaultLanguage" config parameter abandoned (no longer needed)
+
 ----------------------------------------------------------------------
 Changes in Release 0.4.4
 * added "rendererType" attribute to tag library for all components.
