--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -4,11 +4,7 @@ MyFaces Release Notes
 ----------------------------------------------------------------------
 Changes in Release 0.9.0
 * Many, many changes to catch up with current Spec. 1.0 Proposed Final Draft
-* "myfaces_WrapPageContext" config parameter abandoned (does not work with all
-  JSP containers and is obsoltete with Tomcat 5)
-* "myfaces_DefaultLanguage" config parameter abandoned (no longer needed)
-* "myfaces_LogLevel" config parameter abandoned (no longer needed)
-* "myfaces_AutoCreateRequestScopeBeans" config parameter abandoned (no longer needed)
+* Some config parameters abandoned (see migration-0.4-to-0.9.txt)
 
 ----------------------------------------------------------------------
 Changes in Release 0.4.4
