--- a/src/myfaces/javax/faces/Messages.properties
+++ b/src/myfaces/javax/faces/Messages.properties
@@ -98,4 +98,4 @@ net.sourceforge.myfaces.convert.legacy.TimeConverter.EXCEPTION_detail = Specifie
 net.sourceforge.myfaces.convert.impl.NumberConverter.EXCEPTION        = Input Error
 net.sourceforge.myfaces.convert.impl.NumberConverter.EXCEPTION_detail = Specified value is not a valid number.
 
-net.sourceforge.myfaces.renderkit.html.ErrorsRenderer.IN_FIELD = \u0020in {0}
+net.sourceforge.myfaces.renderkit.html.legacy.ErrorsRenderer.IN_FIELD = \u0020in {0}
