--- a/src/myfaces/javax/faces/Messages_de.properties
+++ b/src/myfaces/javax/faces/Messages_de.properties
@@ -98,4 +98,4 @@ net.sourceforge.myfaces.convert.legacy.TimeConverter.EXCEPTION_detail = Der eing
 net.sourceforge.myfaces.convert.impl.NumberConverter.EXCEPTION        = Eingabefehler
 net.sourceforge.myfaces.convert.impl.NumberConverter.EXCEPTION_detail = Der eingegebene Wert ist keine gültige Zahl.
 
-net.sourceforge.myfaces.renderkit.html.ErrorsRenderer.IN_FIELD = \u0020in {0}
+net.sourceforge.myfaces.renderkit.html.legacy.ErrorsRenderer.IN_FIELD = \u0020in {0}
