--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
@@ -4,7 +4,7 @@ today = Heute ist der {0,date,short}.
 
 nav_Home            = Startseite
 nav_Examples        = Beispiele
-nav_Sample_1        = Beispiel 1 (mit Validators)
+nav_Sample_1        = Beispiel 1
 nav_Sample_2        = Beispiel 2
 nav_Simple_list     = Einfache Liste
 nav_Sortable_list   = Sortierbare Liste
@@ -15,7 +15,7 @@ nav_Contact         = Kontakt
 nav_Copyright       = Copyright
 nav_Options         = Einstellungen
 nav_Components      = Komponenten
-nav_Selectbox       = Selectboxen (CarConfigurator)
+nav_Selectbox       = Selectboxen
 nav_FileUpload      = Datei hochladen
 nav_TabbedPane      = Karteireiter
 
@@ -46,6 +46,8 @@ extra_leaderseat = Ledersitze
 discount_0 = Ich will keinen Rabatt
 discount_1 = Ich will den Treuerabatt
 discount_2 = Ich will den Groﬂkundenrabatt
+discount_2_0 = BeachBoys sind super
+discount_2_1 = Red Hot Chillis sind besser
 radio_hint = This Radio is a myfaces extension - you can use html code here!
 sort_cartype = Typ
 sort_carcolor = Farbe
