--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
@@ -6,7 +6,7 @@ nav_Home            = Startseite
 nav_Examples        = Beispiele
 nav_Sample_1        = Beispiel 1
 nav_Sample_2        = Beispiel 2
-nav_Simple_list     = Einfache Liste
+nav_Simple_list     = Einfache Master/Detail Liste
 nav_Sortable_list   = Sortierbare Liste
 nav_Documentation   = Dokumentation
 nav_Features        = Features
@@ -19,6 +19,13 @@ nav_Selectbox       = Selectboxen
 nav_FileUpload      = Datei hochladen
 nav_TabbedPane      = Karteireiter
 
+#
+# buttons
+#
+button_save = Speichern
+button_apply = Übernehmen
+button_cancel = Abbrechen
+button_delete = Löschen
 
 alt_logo = MyFaces - Die Opensource JSF Implementierung
 
@@ -51,6 +58,10 @@ discount_2_1 = Red Hot Chillis sind besser
 radio_hint = This Radio is a myfaces extension - you can use html code here!
 sort_cartype = Typ
 sort_carcolor = Farbe
+
+label_country_name = Land
+label_country_iso = Iso-Code
+new_country = Neues Land anlegen » 
 
 
 
