--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_en.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_en.properties
@@ -6,7 +6,7 @@ nav_Home            = Home
 nav_Examples        = Examples
 nav_Sample_1        = Sample 1
 nav_Sample_2        = Sample 2
-nav_Simple_list     = Simple List
+nav_Simple_list     = Simple Master/Detail List
 nav_Sortable_list   = Sortable List
 nav_Documentation   = Documentation
 nav_Features        = Features
@@ -19,6 +19,13 @@ nav_Selectbox       = Selectboxes
 nav_FileUpload      = File upload
 nav_TabbedPane      = Tabbed Pane
 
+#
+# buttons
+#
+button_save = Save
+button_apply = Apply
+button_cancel = Cancel
+button_delete = Delete
 
 alt_logo = MyFaces - the open source JSF implementation
 
@@ -51,6 +58,11 @@ discount_2_1 = Red Hot Chillis are better
 radio_hint = This Radio is a myfaces extension - you can use html code here!
 sort_cartype = Car type
 sort_carcolor = Car color
+
+label_country_name = Country
+label_country_iso = Iso-Code
+new_country = Add New Country »
+
 
 
 
