--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
@@ -6,7 +6,7 @@ nav_Home            = Startseite
 nav_Examples        = Beispiele
 nav_Sample_1        = Beispiel 1
 nav_Sample_2        = Beispiel 2
-nav_Simple_list     = Einfache Master/Detail Liste
+nav_Simple_list     = Master/Detail Beispiel
 nav_Sortable_list   = Sortierbare Liste
 nav_Documentation   = Dokumentation
 nav_Features        = Features
