--- a/doc/Install.txt
+++ b/doc/Install.txt
@@ -1,34 +1,4 @@
 MyFaces installation instructions
 =================================
 
-What you need
--------------
-- JDK 1.4.0 (or higher)
-- Tomcat 4.0.x or 4.1.x (get it from http://jakarta.apache.org/tomcat/index.html)
-- JSF-API (get the jsf-api.jar from the "JavaServerTM Faces v1.0 Reference
-  Implementation Early Access 4" at http://java.sun.com/j2ee/javaserverfaces/download.html)
-
-
-HOWTO - Run the Example-Application
------------------------------------
-- download and unpack myfaces-0.3.2-examples.tgz
-- see webapps/examples/doc/howto-run.txt
-
-HOWTO - Use MyFaces in your own WebApp
---------------------------------------
-- Copy the file "jsf-api.jar" from the "JSF Reference Implementation EA 4" to
-  the WEB-INF/lib dir of your (J2EE conform) Webapplication.
-- Copy the lib/myfaces.jar file to the WEB-INF/lib dir of your Webapplication.
-- Copy the lib/cos.jar file to the WEB-INF/lib dir of your Webapplication.
-- Copy the conf/faces.properties file to your WEB-INF/classes directory
-- Configure your webapp's web.xml file (see conf/web.xml)
-- Add the line
-    <%@ taglib uri="http://java.sun.com/jsf/html" prefix="h"%>
-  to your JSPs to be able to use the basic HTML JSF tags.
-- Add the line
-    <%@ taglib uri="http://java.sun.com/jsf/core" prefix="f"%>
-  to your JSPs to be able to use the core JSF tags.
-- Add the line
-    <%@ taglib uri="http://myfaces.sourceforge.net/tld/myfaces_ext_0_9.tld"
-               prefix="x"%>
-  to your JSPs if you want to be able to use the myfaces extensions tags.
+You will find the installation instructions at http://myfaces.sourceforge.net.
