--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -2,6 +2,10 @@ MyFaces Release Notes
 =====================
 
 ----------------------------------------------------------------------
+Changes in Release 0.9.1
+* Many, many changes to catch up with final Spec. 1.0
+
+----------------------------------------------------------------------
 Changes in Release 0.9.0
 * Many, many changes to catch up with current Spec. 1.0 Proposed Final Draft
 * Some config parameters abandoned (see migration-0.4-to-0.9.txt)
