--- a/src/myfaces/javax/faces/Messages_de.properties
+++ b/src/myfaces/javax/faces/Messages_de.properties
@@ -69,33 +69,45 @@ javax.faces.validator.LongRangeValidator.TYPE        = Validierungsfehler
 javax.faces.validator.LongRangeValidator.TYPE_detail = Eingegebener Wert hat falschen Datentyp.
 
 
-# myfaces messages
+# additional messages (not specified, but supported by myfaces API converters)
 
-net.sourceforge.myfaces.convert.impl.BigDecimalConverter.EXCEPTION        = Eingabefehler
-net.sourceforge.myfaces.convert.impl.BigDecimalConverter.EXCEPTION_detail = Der eingegebene Wert ist keine gültige Zahl.
+javax.faces.convert.BigDecimalConverter.CONVERSION        = Konvertierungsfehler
+javax.faces.convert.BigDecimalConverter.CONVERSION_detail = Der eingegebene Wert ist keine gültige Zahl.
 
-net.sourceforge.myfaces.convert.impl.LongConverter.EXCEPTION        = Eingabefehler
-net.sourceforge.myfaces.convert.impl.LongConverter.EXCEPTION_detail = Der eingegebene Wert ist keine gültige Zahl.
+javax.faces.convert.BigIntegerConverter.CONVERSION        = Konvertierungsfehler
+javax.faces.convert.BigIntegerConverter.CONVERSION_detail = Der eingegebene Wert ist keine gültige Zahl.
 
-net.sourceforge.myfaces.convert.impl.IntegerConverter.EXCEPTION        = Eingabefehler
-net.sourceforge.myfaces.convert.impl.IntegerConverter.EXCEPTION_detail = Der eingegebene Wert ist keine gültige Zahl.
+javax.faces.convert.BooleanConverter.CONVERSION        = Konvertierungsfehler
+javax.faces.convert.BooleanConverter.CONVERSION_detail = {0} konnte nicht in einen boolschen Wert umgewandelt werden.
 
-net.sourceforge.myfaces.convert.impl.BooleanConverter.EXCEPTION        = Eingabefehler
-net.sourceforge.myfaces.convert.impl.BooleanConverter.EXCEPTION_detail = {0} konnte nicht in einen boolschen Wert umgewandelt werden.
+javax.faces.convert.ByteConverter.CONVERSION        = Konvertierungsfehler
+javax.faces.convert.ByteConverter.CONVERSION_detail = {0} konnte nicht in einen Byte-Wert umgewandelt werden.
 
-net.sourceforge.myfaces.convert.legacy.DateConverter.EXCEPTION        = Eingabefehler
-net.sourceforge.myfaces.convert.legacy.DateConverter.EXCEPTION_detail = Der eingegebene Wert ist kein gültiges Datum.
+javax.faces.convert.CharacterConverter.CONVERSION        = Konvertierungsfehler
+javax.faces.convert.CharacterConverter.CONVERSION_detail = {0} konnte nicht in ein Zeichen umgewandelt werden.
 
-net.sourceforge.myfaces.convert.legacy.DateConverter.TYPE_ERROR        = Interner Fehler
-net.sourceforge.myfaces.convert.legacy.DateConverter.TYPE_ERROR_detail = Der zu formatierende Wert ist kein gültiges Datum.
+javax.faces.convert.DateTimeConverter.CONVERSION        = Konvertierungsfehler
+javax.faces.convert.DateTimeConverter.CONVERSION_detail = {0} ist keine gültige Datum/Zeit-Angabe.
 
-net.sourceforge.myfaces.convert.legacy.DateTimeConverter.EXCEPTION        = Eingabefehler
-net.sourceforge.myfaces.convert.legacy.DateTimeConverter.EXCEPTION_detail = Der eingegebene Wert ist keine gültige Datum/Zeit-Angabe.
+javax.faces.convert.DoubleConverter.CONVERSION        = Konvertierungsfehler
+javax.faces.convert.DoubleConverter.CONVERSION_detail = Der eingegebene Wert ist keine gültige Zahl.
 
-net.sourceforge.myfaces.convert.legacy.TimeConverter.EXCEPTION        = Eingabefehler
-net.sourceforge.myfaces.convert.legacy.TimeConverter.EXCEPTION_detail = Der eingegebene Wert ist keine gültige Zeitangabe.
+javax.faces.convert.FloatConverter.CONVERSION        = Konvertierungsfehler
+javax.faces.convert.FloatConverter.CONVERSION_detail = Der eingegebene Wert ist keine gültige Zahl.
 
-net.sourceforge.myfaces.convert.impl.NumberConverter.EXCEPTION        = Eingabefehler
-net.sourceforge.myfaces.convert.impl.NumberConverter.EXCEPTION_detail = Der eingegebene Wert ist keine gültige Zahl.
+javax.faces.convert.IntegerConverter.CONVERSION        = Konvertierungsfehler
+javax.faces.convert.IntegerConverter.CONVERSION_detail = Der eingegebene Wert ist keine gültige Zahl.
+
+javax.faces.convert.LongConverter.CONVERSION        = Konvertierungsfehler
+javax.faces.convert.LongConverter.CONVERSION_detail = Der eingegebene Wert ist keine gültige Zahl.
+
+javax.faces.convert.NumberConverter.CONVERSION        = Konvertierungsfehler
+javax.faces.convert.NumberConverter.CONVERSION_detail = Der eingegebene Wert ist keine gültige Zahl.
+
+javax.faces.convert.ShortConverter.CONVERSION        = Konvertierungsfehler
+javax.faces.convert.ShortConverter.CONVERSION_detail = Der eingegebene Wert ist keine gültige Zahl.
+
+
+# myfaces specific messages
 
 net.sourceforge.myfaces.renderkit.html.HtmlMessagesRenderer.IN_FIELD = \u0020in {0}
