--- a/src/myfaces/javax/faces/Messages_en.properties
+++ b/src/myfaces/javax/faces/Messages_en.properties
@@ -69,33 +69,45 @@ javax.faces.validator.LongRangeValidator.TYPE        = Validation Error
 javax.faces.validator.LongRangeValidator.TYPE_detail = Value is not of the correct type.
 
 
-# myfaces messages
+# additional messages (not specified, but supported by myfaces API converters)
 
-net.sourceforge.myfaces.convert.impl.BigDecimalConverter.EXCEPTION        = Input Error
-net.sourceforge.myfaces.convert.impl.BigDecimalConverter.EXCEPTION_detail = Specified value is not a valid number.
+javax.faces.convert.BigDecimalConverter.CONVERSION        = Conversion Error
+javax.faces.convert.BigDecimalConverter.CONVERSION_detail = Specified value is not a valid number.
 
-net.sourceforge.myfaces.convert.impl.LongConverter.EXCEPTION        = Input Error
-net.sourceforge.myfaces.convert.impl.LongConverter.EXCEPTION_detail = Specified value is not a valid number.
+javax.faces.convert.BigIntegerConverter.CONVERSION        = Conversion Error
+javax.faces.convert.BigIntegerConverter.CONVERSION_detail = Specified value is not a valid number.
 
-net.sourceforge.myfaces.convert.impl.IntegerConverter.EXCEPTION        = Input Error
-net.sourceforge.myfaces.convert.impl.IntegerConverter.EXCEPTION_detail = Specified value is not a valid number.
+javax.faces.convert.BooleanConverter.CONVERSION        = Conversion Error
+javax.faces.convert.BooleanConverter.CONVERSION_detail = Could not convert '{0}' to Boolean.
 
-net.sourceforge.myfaces.convert.impl.BooleanConverter.EXCEPTION        = Input Error
-net.sourceforge.myfaces.convert.impl.BooleanConverter.EXCEPTION_detail = Could not convert '{0}' to Boolean.
+javax.faces.convert.ByteConverter.CONVERSION        = Conversion Error
+javax.faces.convert.ByteConverter.CONVERSION_detail = Could not convert '{0}' to Byte.
 
-net.sourceforge.myfaces.convert.legacy.DateConverter.EXCEPTION        = Input Error
-net.sourceforge.myfaces.convert.legacy.DateConverter.EXCEPTION_detail = Specified value is not a valid date.
+javax.faces.convert.CharacterConverter.CONVERSION        = Conversion Error
+javax.faces.convert.CharacterConverter.CONVERSION_detail = Could not convert '{0}' to Character.
 
-net.sourceforge.myfaces.convert.legacy.DateConverter.TYPE_ERROR        = Internal error
-net.sourceforge.myfaces.convert.legacy.DateConverter.TYPE_ERROR_detail = Value to be formatted is no valid date.
+javax.faces.convert.DateTimeConverter.CONVERSION        = Conversion Error
+javax.faces.convert.DateTimeConverter.CONVERSION_detail = Specified value is not a valid date/time.
 
-net.sourceforge.myfaces.convert.legacy.DateTimeConverter.EXCEPTION        = Input Error
-net.sourceforge.myfaces.convert.legacy.DateTimeConverter.EXCEPTION_detail = Specified value is not a valid date/time.
+javax.faces.convert.DoubleConverter.CONVERSION        = Conversion Error
+javax.faces.convert.DoubleConverter.CONVERSION_detail = Specified value is not a valid number.
 
-net.sourceforge.myfaces.convert.legacy.TimeConverter.EXCEPTION        = Input Error
-net.sourceforge.myfaces.convert.legacy.TimeConverter.EXCEPTION_detail = Specified value is not a valid time.
+javax.faces.convert.FloatConverter.CONVERSION        = Conversion Error
+javax.faces.convert.FloatConverter.CONVERSION_detail = Specified value is not a valid number.
 
-net.sourceforge.myfaces.convert.impl.NumberConverter.EXCEPTION        = Input Error
-net.sourceforge.myfaces.convert.impl.NumberConverter.EXCEPTION_detail = Specified value is not a valid number.
+javax.faces.convert.IntegerConverter.CONVERSION        = Conversion Error
+javax.faces.convert.IntegerConverter.CONVERSION_detail = Specified value is not a valid number.
+
+javax.faces.convert.LongConverter.CONVERSION        = Conversion Error
+javax.faces.convert.LongConverter.CONVERSION_detail = Specified value is not a valid number.
+
+javax.faces.convert.NumberConverter.CONVERSION        = Conversion Error
+javax.faces.convert.NumberConverter.CONVERSION_detail = Specified value is not a valid number.
+
+javax.faces.convert.ShortConverter.CONVERSION        = Conversion Error
+javax.faces.convert.ShortConverter.CONVERSION_detail = Specified value is not a valid number.
+
+
+# myfaces specific messages
 
 net.sourceforge.myfaces.renderkit.html.HtmlMessagesRenderer.IN_FIELD = \u0020in {0}
