--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -2,6 +2,12 @@ MyFaces Release Notes
 =====================
 
 ----------------------------------------------------------------------
+Changes in Release 1.0 alpha
+* MyFaces hast it's own JSF-API Implementation now. Sun's JSF-API will no longer be needed.
+* Bugfixes
+* Sun's JSF-RI cardemo sample can now be run with MyFaces (see Documentation on http://myfaces.sourceforge.net)
+
+----------------------------------------------------------------------
 Changes in Release 0.9.1
 * Many, many changes to catch up with final Spec. 1.0
 
