--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -3,7 +3,7 @@ MyFaces Release Notes
 
 ----------------------------------------------------------------------
 Changes in Release 1.0 alpha
-* MyFaces hast it's own JSF-API Implementation now. Sun's jsf-api.jar will no longer be needed.
+* MyFaces has it's own JSF-API Implementation now. Sun's jsf-api.jar will no longer be needed.
 * Bugfixes
 * Sun's JSF-RI cardemo sample can now be run with MyFaces (see Documentation on http://myfaces.sourceforge.net)
 
