new calendar component
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166527 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
@@ -18,6 +18,8 @@ nav_Components      = Komponenten
 nav_Selectbox       = Selectboxen
 nav_FileUpload      = Datei hochladen
 nav_TabbedPane      = Karteireiter
+nav_Calendar        = Kalender
+
 
 #
 # buttons
