--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_en.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_en.properties
@@ -18,6 +18,8 @@ nav_Components      = Components
 nav_Selectbox       = Selectboxes
 nav_FileUpload      = File upload
 nav_TabbedPane      = Tabbed Pane
+nav_Calendar        = Calendar
+
 
 #
 # buttons
