--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
@@ -63,7 +63,8 @@ sort_carcolor = Farbe
 
 label_country_name = Land
 label_country_iso = Iso-Code
-new_country = Neues Land anlegen » 
+new_country = Neues Land anlegen »
+country_edit_list = Alle Länder bearbeiten »
 
 
 
