--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_en.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_en.properties
@@ -6,8 +6,8 @@ nav_Home            = Home
 nav_Examples        = Examples
 nav_Sample_1        = Sample 1
 nav_Sample_2        = Sample 2
-nav_Simple_list     = Master/Detail Example
-nav_Sortable_list   = Sortable List
+nav_dataTable       = Master/Detail Example
+nav_sortTable       = Sortable Table
 nav_Documentation   = Documentation
 nav_Features        = Features
 nav_Info            = Info
@@ -19,7 +19,7 @@ nav_Selectbox       = Selectboxes
 nav_FileUpload      = File upload
 nav_TabbedPane      = Tabbed Pane
 nav_Calendar        = Calendar
-
+nav_dataList        = Dynamic Lists
 
 #
 # buttons
@@ -64,12 +64,8 @@ sort_carcolor = Car color
 label_country_name = Country
 label_country_iso = Iso-Code
 new_country = Add New Country »
-country_edit_list = Edit all Countries »
+country_edit_table = Edit all Countries »
 
-
-
-
-
-
-
-
+dataList_simple = Simple list
+dataList_ul = Unordered list
+dataList_ol = Ordered list
