--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
@@ -6,8 +6,8 @@ nav_Home            = Startseite
 nav_Examples        = Beispiele
 nav_Sample_1        = Beispiel 1
 nav_Sample_2        = Beispiel 2
-nav_Simple_list     = Master/Detail Beispiel
-nav_Sortable_list   = Sortierbare Liste
+nav_dataTable       = Master/Detail Beispiel
+nav_sortTable       = Sortierbare Tabelle
 nav_Documentation   = Dokumentation
 nav_Features        = Features
 nav_Info            = Info
@@ -19,6 +19,7 @@ nav_Selectbox       = Selectboxen
 nav_FileUpload      = Datei hochladen
 nav_TabbedPane      = Karteireiter
 nav_Calendar        = Kalender
+nav_dataList        = Dynamische Listen
 
 
 #
@@ -64,10 +65,8 @@ sort_carcolor = Farbe
 label_country_name = Land
 label_country_iso = Iso-Code
 new_country = Neues Land anlegen »
-country_edit_list = Alle Länder bearbeiten »
+country_edit_table = Alle Länder bearbeiten »
 
-
-
-
-
-
+dataList_simple = Einfache Liste
+dataList_ul = Unsortierte Liste
+dataList_ol = Nummerierte Liste
