--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -2,6 +2,12 @@ MyFaces Release Notes
 =====================
 
 ----------------------------------------------------------------------
+Changes in Release 1.0.1 alpha
+* x-checked various Renderers for Specs (tlddoc) compliance
+* fixed server state saving bug
+* new DataList component (dynamical List based on UIData - see examples webapp)
+
+----------------------------------------------------------------------
 Changes in Release 1.0.0 alpha
 * MyFaces has it's own JSF-API Implementation now!
   (Sun's jsf-api.jar will no longer be needed)
