--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
@@ -58,6 +58,7 @@ discount_1 = Ich will den Treuerabatt
 discount_2 = Ich will den Groﬂkundenrabatt
 discount_2_0 = BeachBoys sind super
 discount_2_1 = Red Hot Chillis sind besser
+discount_2_2 = Meine Lieblingsband
 radio_hint = This Radio is a myfaces extension - you can use html code here!
 sort_cartype = Typ
 sort_carcolor = Farbe
