--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -3,7 +3,8 @@ MyFaces Release Notes
 
 ----------------------------------------------------------------------
 Changes in Release 1.0.2 alpha
-* refactored fileupload component to net.sourceforge.myfaces.custom.fileupload package
+* refactored custom components to net.sourceforge.myfaces.custom package
+* custom message and messages component with new attributes summaryFormat and detailFormat  
 
 ----------------------------------------------------------------------
 Changes in Release 1.0.1 alpha
