--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_fr.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_fr.properties
@@ -20,6 +20,7 @@ nav_FileUpload      = Upload de fichier
 nav_TabbedPane      = Panneau à onglets
 nav_Calendar        = Calendrier
 nav_dataList        = Listes dynamiques
+nav_tree            = Arbre
 
 #
 # buttons
