--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
@@ -20,6 +20,7 @@ nav_FileUpload      = Datei hochladen
 nav_TabbedPane      = Karteireiter
 nav_Calendar        = Kalender
 nav_dataList        = Dynamische Listen
+nav_tree            = Baum
 
 
 #
