--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -2,6 +2,11 @@ MyFaces Release Notes
 =====================
 
 ----------------------------------------------------------------------
+Changes in Release 1.0.3 alpha
+* commandLink javascript error bug fixed
+* bug 943210 ("outputLink produces very long URLs that don't work") fixed
+
+----------------------------------------------------------------------
 Changes in Release 1.0.2 alpha
 * refactored custom components to net.sourceforge.myfaces.custom package
 * custom message and messages component with new attributes summaryFormat and detailFormat
