bug #945118 (Checkbox session state) fixed
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166777 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -4,7 +4,8 @@ MyFaces Release Notes
 ----------------------------------------------------------------------
 Changes in Release 1.0.3 alpha
 * commandLink javascript error bug fixed
-* bug 943210 ("outputLink produces very long URLs that don't work") fixed
+* bug #943210 ("outputLink produces very long URLs that don't work") fixed
+* bug #945118 ("Checkbox session state") fixed
 
 ----------------------------------------------------------------------
 Changes in Release 1.0.2 alpha
