--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
@@ -63,6 +63,7 @@ discount_2_2 = Meine Lieblingsband
 radio_hint = This Radio is a myfaces extension - you can use html code here!
 sort_cartype = Typ
 sort_carcolor = Farbe
+sales_tax = Mehrwertsteuer
 
 label_country_name = Land
 label_country_iso = Iso-Code
