--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_fr.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_fr.properties
@@ -62,6 +62,7 @@ discount_2_2 = Mon groupe favori
 radio_hint = This Radio is a myfaces extension - you can use html code here!
 sort_cartype = Type de voiture
 sort_carcolor = Couleur
+sales_tax = Taxe de vente
 
 label_country_name = Pays
 label_country_iso = Code Iso
