--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -2,6 +2,10 @@ MyFaces Release Notes
 =====================
 
 ----------------------------------------------------------------------
+Changes in Release 1.0.4 alpha
+
+
+----------------------------------------------------------------------
 Changes in Release 1.0.3 alpha
 * commandLink javascript error bug fixed
 * bug #943210 ("outputLink produces very long URLs that don't work") fixed
