fix #952453: changed CONFIG_FILES context param to spec-compliant javax.faces.CONFIG_FILES
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166806 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -3,6 +3,13 @@ MyFaces Release Notes
 
 ----------------------------------------------------------------------
 Changes in Release 1.0.4 alpha
+
+IMPORTANT NOTE: because of fix for bug #952453 the context parameter
+javax.faces.application.CONFIG_FILES was changed to the spec-compliant
+javax.faces.CONFIG_FILES. You have to modify your web.xml accordingly,
+otherwise your config files will no longer be found and parsed.
+
+* bug #952453	Class FacesConfigFactoryBase search for wrong context-param
 * bug #951988	myfaces doesn't read faces-config.xml in foo.jars
 * bug #951896	command links broken if ALLOW_JAVASCRIPT=false
 * bug #948629	UpdateActionListener looking for String -> Object converter
