--- a/src/myfaces/javax/faces/Messages_de.properties
+++ b/src/myfaces/javax/faces/Messages_de.properties
@@ -1,21 +1,21 @@
-#
+
 # MyFaces - the free JSF implementation
 # Copyright (C) 2003, 2004  The MyFaces Team (http://myfaces.sourceforge.net)
-#
+
 # This library is free software; you can redistribute it and/or
 # modify it under the terms of the GNU Lesser General Public
 # License as published by the Free Software Foundation; either
 # version 2.1 of the License, or (at your option) any later version.
-#
+
 # This library is distributed in the hope that it will be useful,
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
 # Lesser General Public License for more details.
-#
+
 # You should have received a copy of the GNU Lesser General Public
 # License along with this library; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
-#
+
 
 
 # standard messages (Spec. 2.5.1.4)
@@ -111,3 +111,8 @@ javax.faces.convert.ShortConverter.CONVERSION_detail = Der eingegebene Wert ist 
 # myfaces specific messages
 
 net.sourceforge.myfaces.renderkit.html.HtmlMessagesRenderer.IN_FIELD = \u0020in {0}
+myfaces.Email.INVALID = Validierungsfehler
+myfaces.Email.INVALID_detail = Eingegebener Wert ist keine gültige Emailadresse.
+
+myfaces.Creditcard.INVALID = Validierungsfehler
+myfaces.Creditcard.INVALID_detail = Eingegebener Wert ist keine gültige Kreditkartenummer
