added a new sample for the validators
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166839 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
@@ -21,11 +21,11 @@ nav_TabbedPane      = Karteireiter
 nav_Calendar        = Kalender
 nav_dataList        = Dynamische Listen
 nav_tree            = Baum
+nav_Validate		= Validierungen
 
 
-#
 # buttons
-#
+
 button_save = Speichern
 button_apply = Übernehmen
 button_cancel = Abbrechen
@@ -38,9 +38,9 @@ option_layout = Layout
 
 empty_selitem = Bitte auswählen ...
 
-#
+
 # components examples
-#
+
 label_cars = Modell
 label_colors = Farben
 label_extras = Extras
