--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_fr.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_fr.properties
@@ -21,10 +21,10 @@ nav_TabbedPane      = Panneau à onglets
 nav_Calendar        = Calendrier
 nav_dataList        = Listes dynamiques
 nav_tree            = Arbre
+nav_Validate		= Validations
 
-#
 # buttons
-#
+
 button_save = Sauvegarder
 button_apply = Appliquer
 button_cancel = Annuler
@@ -37,9 +37,9 @@ option_layout = Layout
 
 empty_selitem = Choisissez ...
 
-#
+
 # components examples
-#
+
 label_cars = Modèle
 label_colors = Couleurs
 label_extras = Extras
