--- a/src/myfaces/javax/faces/Messages_fr.properties
+++ b/src/myfaces/javax/faces/Messages_fr.properties
@@ -111,8 +111,8 @@ javax.faces.convert.ShortConverter.CONVERSION_detail = La donnée n''est pas un n
 # myfaces specific messages
 
 net.sourceforge.myfaces.renderkit.html.HtmlMessagesRenderer.IN_FIELD = \u0020in {0}
-myfaces.Email.INVALID = Validation Error
-myfaces.Email.INVALID_detail = Value is not a correct email-address.
+myfaces.Email.INVALID = Erreur de Validation
+myfaces.Email.INVALID_detail = TODO/TRANSLATE: Value is not a correct email-address.
 
-myfaces.Creditcard.INVALID = Validation Error
-myfaces.Creditcard.INVALID_detail =  Value is not a correct creditcard
+myfaces.Creditcard.INVALID = Erreur de Validation
+myfaces.Creditcard.INVALID_detail = TODO/TRANSLATE: Value is not a correct creditcard
