--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_fr.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_fr.properties
@@ -21,7 +21,7 @@ nav_TabbedPane      = Panneau à onglets
 nav_Calendar        = Calendrier
 nav_dataList        = Listes dynamiques
 nav_tree            = Arbre
-nav_Validate		= Validations
+nav_Validate		= TODO/TRANSLATE: Validations
 
 # buttons
 
