better ID for validators
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166854 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/myfaces/javax/faces/Messages_de.properties
+++ b/src/myfaces/javax/faces/Messages_de.properties
@@ -111,8 +111,8 @@ javax.faces.convert.ShortConverter.CONVERSION_detail = Der eingegebene Wert ist 
 # myfaces specific messages
 
 net.sourceforge.myfaces.renderkit.html.HtmlMessagesRenderer.IN_FIELD = \u0020in {0}
-myfaces.Email.INVALID = Validierungsfehler
-myfaces.Email.INVALID_detail = Eingegebener Wert ist keine gültige Emailadresse.
+net.sourceforge.myfaces.Email.INVALID = Validierungsfehler
+net.sourceforge.myfaces.Email.INVALID_detail = Eingegebener Wert ist keine gültige Emailadresse.
 
-myfaces.Creditcard.INVALID = Validierungsfehler
-myfaces.Creditcard.INVALID_detail = Eingegebener Wert ist keine gültige Kreditkartenummer
+net.sourceforge.myfaces.Creditcard.INVALID = Validierungsfehler
+net.sourceforge.myfaces.Creditcard.INVALID_detail = Eingegebener Wert ist keine gültige Kreditkartenummer
