--- a/src/myfaces/javax/faces/Messages_en.properties
+++ b/src/myfaces/javax/faces/Messages_en.properties
@@ -111,9 +111,9 @@ javax.faces.convert.ShortConverter.CONVERSION_detail = Specified value is not a 
 # myfaces specific messages
 
 net.sourceforge.myfaces.renderkit.html.HtmlMessagesRenderer.IN_FIELD = \u0020in {0}
-myfaces.Email.INVALID = Validation Error
-myfaces.Email.INVALID_detail = Value is not a correct email-address.
+net.sourceforge.myfaces.Email.INVALID = Validation Error
+net.sourceforge.myfaces.Email.INVALID_detail = Value is not a correct email-address.
 
 
-myfaces.Creditcard.INVALID = Validation Error
-myfaces.Creditcard.INVALID_detail =  Value is not a correct creditcard
+net.sourceforge.myfaces.Creditcard.INVALID = Validation Error
+net.sourceforge.myfaces.Creditcard.INVALID_detail =  Value is not a correct creditcard
