--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -10,6 +10,9 @@ javax.faces.CONFIG_FILES. You have to modify your web.xml accordingly,
 otherwise your config files will no longer be found and parsed.
 
 * new renderedIfEmpty attribute for extended <x:dataTable> component (see tlddocs)
+* new validators (creditcard, email)
+* bug #961241	Checkbox in dataTable problem
+* bug #960581	<x:panelTabbedPane selectedIndex
 * bug #959926	<h:selectOneRadio and styleClass
 * bug #953783	h:commandLink renders value as text
 * bug #955135	graphicImage tag
