--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
@@ -22,6 +22,7 @@ nav_Calendar        = Kalender
 nav_dataList        = Dynamische Listen
 nav_tree            = Baum
 nav_Validate		= Validierungen
+nav_rdfTicker		= RdfTicker
 
 
 # buttons
