--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_fr.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_fr.properties
@@ -22,6 +22,7 @@ nav_Calendar        = Calendrier
 nav_dataList        = Listes dynamiques
 nav_tree            = Arbre
 nav_Validate		= TODO/TRANSLATE: Validations
+nav_rdfTicker		= TODO/TRANSLATE: RdfTicker
 
 # buttons
 
