--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -3,7 +3,9 @@ MyFaces Release Notes
 
 ----------------------------------------------------------------------
 Changes in Release 1.0.5 beta
+* modified renderers to comply with version 1.1 of the spec
 * bug #955111	RestoreState of outputText with mixed ValueBinding attribute
+* bug #962084	rowClasses in GridRenderer
 
 ----------------------------------------------------------------------
 Changes in Release 1.0.4 beta
