new validator for regExpr. and began with Friendly validator messages
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166877 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/myfaces/javax/faces/Messages.properties
+++ b/src/myfaces/javax/faces/Messages.properties
@@ -112,7 +112,10 @@ javax.faces.convert.ShortConverter.CONVERSION_detail = Specified value is not a 
 
 net.sourceforge.myfaces.renderkit.html.HtmlMessagesRenderer.IN_FIELD = \u0020in {0}
 net.sourceforge.myfaces.Email.INVALID = Validation Error
-net.sourceforge.myfaces.Email.INVALID_detail = Value is not a correct email-address.
+net.sourceforge.myfaces.Email.INVALID_detail ="{0}": Value is not a correct email-address.
 
 net.sourceforge.myfaces.Creditcard.INVALID = Validation Error
-net.sourceforge.myfaces.Creditcard.INVALID_detail =  Value is not a correct creditcard
+net.sourceforge.myfaces.Creditcard.INVALID_detail ="{0}": Value is not a correct creditcard
+
+net.sourceforge.myfaces.Regexpr.INVALID=Validation Error
+net.sourceforge.myfaces.Regexpr.INVALID_detail="{0}": Value is not valid.
