--- a/src/myfaces/javax/faces/Messages_de.properties
+++ b/src/myfaces/javax/faces/Messages_de.properties
@@ -112,7 +112,10 @@ javax.faces.convert.ShortConverter.CONVERSION_detail = Der eingegebene Wert ist 
 
 net.sourceforge.myfaces.renderkit.html.HtmlMessagesRenderer.IN_FIELD = \u0020in {0}
 net.sourceforge.myfaces.Email.INVALID = Validierungsfehler
-net.sourceforge.myfaces.Email.INVALID_detail = Eingegebener Wert ist keine gültige Emailadresse.
+net.sourceforge.myfaces.Email.INVALID_detail ="{0}": Eingegebener Wert ist keine gültige Emailadresse.
 
 net.sourceforge.myfaces.Creditcard.INVALID = Validierungsfehler
-net.sourceforge.myfaces.Creditcard.INVALID_detail = Eingegebener Wert ist keine gültige Kreditkartenummer
+net.sourceforge.myfaces.Creditcard.INVALID_detail ="{0}": Eingegebener Wert ist keine gültige Kreditkartenummer
+
+net.sourceforge.myfaces.Regexpr.INVALID=Validierungsfehler
+net.sourceforge.myfaces.Regexpr.INVALID_detail="{0}": Eingegebener Wert ist ungültig.
