--- a/src/myfaces/javax/faces/Messages_fr.properties
+++ b/src/myfaces/javax/faces/Messages_fr.properties
@@ -112,7 +112,10 @@ javax.faces.convert.ShortConverter.CONVERSION_detail = La donnée n''est pas un n
 
 net.sourceforge.myfaces.renderkit.html.HtmlMessagesRenderer.IN_FIELD = \u0020in {0}
 net.sourceforge.myfaces.Email.INVALID = Erreur de Validation
-net.sourceforge.myfaces.Email.INVALID_detail = TODO/TRANSLATE: Value is not a correct email-address.
+net.sourceforge.myfaces.Email.INVALID_detail = TODO/TRANSLATE:"{0}": Value is not a correct email-address.
 
 net.sourceforge.myfaces.Creditcard.INVALID = Erreur de Validation
-net.sourceforge.myfaces.Creditcard.INVALID_detail = TODO/TRANSLATE: Value is not a correct creditcard
+net.sourceforge.myfaces.Creditcard.INVALID_detail = TODO/TRANSLATE:"{0}": Value is not a correct creditcard
+
+net.sourceforge.myfaces.Regexpr.INVALID=Erreur de Validation
+net.sourceforge.myfaces.Regexpr.INVALID_detail=TODO/TRANSLATE:"{0}": Value is not valid.
