--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -6,8 +6,10 @@ Changes in Release 1.0.5 beta
 * new validator (Regular Expressions)
 * new component (rdfticker)
 * modified renderers to comply with version 1.1 of the spec
+* modified dataList to support active components (comandLink, ...)
 * bug #955111	RestoreState of outputText with mixed ValueBinding attribute
 * bug #962084	rowClasses in GridRenderer
+* bug #967991	Action always called twice
 
 ----------------------------------------------------------------------
 Changes in Release 1.0.4 beta
