--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_fr.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_fr.properties
@@ -1,4 +1,4 @@
-welcome = Bienvenue à
+welcome = Bienvenue ï¿½
 today = Aujourd''hui, le {0,date,short}.
 
 
@@ -6,23 +6,23 @@ nav_Home            = Home page
 nav_Examples        = Exemples
 nav_Sample_1        = Exemple 1
 nav_Sample_2        = Exemple 2
-nav_dataTable       = Maître/Détail
+nav_dataTable       = Maï¿½tre/Dï¿½tail
 nav_sortTable       = Table Triable
 nav_Documentation   = Documentation
-nav_Features        = Caractéristiques
+nav_Features        = Caractï¿½ristiques
 nav_Info            = Info
 nav_Contact         = Contact
 nav_Copyright       = Copyright
 nav_Options         = Options
 nav_Components      = Composants
-nav_Selectbox       = Boites de sélection
+nav_Selectbox       = Boites de sï¿½lection
 nav_FileUpload      = Upload de fichier
-nav_TabbedPane      = Panneau à onglets
+nav_TabbedPane      = Panneau ï¿½ onglets
 nav_Calendar        = Calendrier
 nav_dataList        = Listes dynamiques
 nav_tree            = Arbre
-nav_Validate		= TODO/TRANSLATE: Validations
-nav_rdfTicker		= TODO/TRANSLATE: RdfTicker
+nav_Validate		= Validations
+nav_rdfTicker		= Ticker Rdf
 
 # buttons
 
@@ -31,7 +31,7 @@ button_apply = Appliquer
 button_cancel = Annuler
 button_delete = Effacer
 
-alt_logo = MyFaces - l''implémentation JSF open source
+alt_logo = MyFaces - l''implï¿½mentation JSF open source
 
 option_lang = Voir cette page en
 option_layout = Layout
@@ -41,21 +41,21 @@ empty_selitem = Choisissez ...
 
 # components examples
 
-label_cars = Modèle
+label_cars = Modï¿½le
 label_colors = Couleurs
 label_extras = Extras
 button_calcprice = Calculer le prix
-msg_price = {0,choice,0#Configurer votre rêve le plus fou!|1< Votre prix: \u20AC\u00A0{0}}
+msg_price = {0,choice,0#Configurer votre rï¿½ve le plus fou!|1< Votre prix: \u20AC\u00A0{0}}
 color_black = noir
 color_blue = bleu
 color_marine = bleu marine
 color_red = rouge
-extra_aircond = Air-conditionnée
-extra_sideab = Airbags de côté
-extra_mirrowheat = Rétroviseurs chauffés
-extra_leaderseat = Sièges en cuir
+extra_aircond = Air-conditionnï¿½e
+extra_sideab = Airbags de cï¿½tï¿½
+extra_mirrowheat = Rï¿½troviseurs chauffï¿½s
+extra_leaderseat = Siï¿½ges en cuir
 discount_0 = Je ne veux pas de remise
-discount_1 = Je veux une remise cumulée
+discount_1 = Je veux une remise cumulï¿½e
 discount_2 = Je veux une remise entreprise
 discount_2_0 = Les BeachBoys sont super
 discount_2_1 = Les Red Hot Chillis sont mieux
@@ -71,5 +71,5 @@ new_country = Ajouter un pays ?
 country_edit_table = Editer tous les pays ?
 
 dataList_simple = Liste simple
-dataList_ul = Liste non ordonnée
-dataList_ol = Liste ordonnée
+dataList_ul = Liste non ordonnï¿½e
+dataList_ol = Liste ordonnï¿½e
