--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -3,6 +3,7 @@ MyFaces Release Notes
 
 ----------------------------------------------------------------------
 Changes in Release 1.0.5 beta
+* new faces configurator
 * new validator (Regular Expressions)
 * new component (rdfticker)
 * modified renderers to comply with version 1.1 of the spec
@@ -10,6 +11,8 @@ Changes in Release 1.0.5 beta
 * bug #955111	RestoreState of outputText with mixed ValueBinding attribute
 * bug #962084	rowClasses in GridRenderer
 * bug #967991	Action always called twice
+* bug #952385  	decorator only for Viewhandler available
+* bug #957938 	map-entries in faces-config.xml
 
 ----------------------------------------------------------------------
 Changes in Release 1.0.4 beta
