fix #970747: force separate end tag for empty select list
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166921 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -13,6 +13,7 @@ Changes in Release 1.0.5 beta
 * bug #967991	Action always called twice
 * bug #952385  	decorator only for Viewhandler available
 * bug #957938 	map-entries in faces-config.xml
+* bug #970747	Incorrect rendering of <select> tag
 
 ----------------------------------------------------------------------
 Changes in Release 1.0.4 beta
