fix #972165: do not reset disabled html checkboxes (the browser does not send a form value for disabled checkboxes even if value=true)
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166922 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -14,6 +14,7 @@ Changes in Release 1.0.5 beta
 * bug #952385  	decorator only for Viewhandler available
 * bug #957938 	map-entries in faces-config.xml
 * bug #970747	Incorrect rendering of <select> tag
+* bug #972165	<h:selectBooleanCheckbox> and disabled attribute
 
 ----------------------------------------------------------------------
 Changes in Release 1.0.4 beta
