--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
@@ -23,7 +23,7 @@ nav_dataList        = Dynamische Listen
 nav_tree            = Baum
 nav_Validate		= Validierungen
 nav_rdfTicker		= RdfTicker
-
+nva_dataScroller    = DataScroller
 
 # buttons
 
@@ -44,6 +44,7 @@ empty_selitem = Bitte auswählen ...
 
 label_cars = Modell
 label_colors = Farben
+label_color = Farbe
 label_extras = Extras
 button_calcprice = Preis berechnen
 msg_price = {0,choice,0#Stell dir dein Traumauto zusammen!|1< Dein Preis: \u20AC\u00A0{0}}
