new validator added (Equal_Validator)
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166935 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/myfaces/javax/faces/Messages.properties
+++ b/src/myfaces/javax/faces/Messages.properties
@@ -114,6 +114,9 @@ net.sourceforge.myfaces.renderkit.html.HtmlMessagesRenderer.IN_FIELD = \u0020in 
 net.sourceforge.myfaces.Email.INVALID = Validation Error
 net.sourceforge.myfaces.Email.INVALID_detail ="{0}": Value is not a correct email-address.
 
+net.sourceforge.myfaces.Equal.INVALID = Validation Error
+net.sourceforge.myfaces.Equal.INVALID_detail ="{0}": Value is not equal with value of "{1}".
+
 net.sourceforge.myfaces.Creditcard.INVALID = Validation Error
 net.sourceforge.myfaces.Creditcard.INVALID_detail ="{0}": Value is not a correct creditcard
 
