--- a/src/myfaces/javax/faces/Messages_de.properties
+++ b/src/myfaces/javax/faces/Messages_de.properties
@@ -114,6 +114,9 @@ net.sourceforge.myfaces.renderkit.html.HtmlMessagesRenderer.IN_FIELD = \u0020in 
 net.sourceforge.myfaces.Email.INVALID = Validierungsfehler
 net.sourceforge.myfaces.Email.INVALID_detail ="{0}": Eingegebener Wert ist keine gültige Emailadresse.
 
+net.sourceforge.myfaces.Equal.INVALID = Validierungsfehler
+net.sourceforge.myfaces.Equal.INVALID_detail ="{0}": Eingegebener Wert ist nicht identisch mit dem des Feldes "{1}".
+
 net.sourceforge.myfaces.Creditcard.INVALID = Validierungsfehler
 net.sourceforge.myfaces.Creditcard.INVALID_detail ="{0}": Eingegebener Wert ist keine gültige Kreditkartenummer
 
