--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -5,6 +5,7 @@ MyFaces Release Notes
 Changes in Release 1.0.5 beta
 * new faces configurator
 * new validator (Regular Expressions)
+* new validator (Equal)
 * new component (rdfticker)
 * new component (dataScroller)
 * modified renderers to comply with version 1.1 of the spec
