bug fixed when running thru array
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@166944 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
@@ -75,3 +75,5 @@ country_edit_table = Alle Länder bearbeiten »
 dataList_simple = Einfache Liste
 dataList_ul = Unsortierte Liste
 dataList_ol = Nummerierte Liste
+
+dataScroller_pages = Seite {0} / {1}
