--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -6,7 +6,7 @@ Changes in Release 1.0.5 beta
 * new faces configurator
 * new validator (Regular Expressions)
 * new validator (Equal)
-* new component (rdfticker)
+* new component (rssticker)
 * new component (dataScroller)
 * modified renderers to comply with version 1.1 of the spec
 * modified dataList to support active components (comandLink, ...)
