--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -8,6 +8,7 @@ Changes in Release 1.0.5 beta
 * new validator (Equal)
 * new component (rssticker)
 * new component (dataScroller)
+* new component (jscookMenu)
 * modified renderers to comply with version 1.1 of the spec
 * modified dataList to support active components (comandLink, ...)
 * bug #955111	RestoreState of outputText with mixed ValueBinding attribute
