--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_fr.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_fr.properties
@@ -22,7 +22,7 @@ nav_Calendar        = Calendrier
 nav_dataList        = Listes dynamiques
 nav_tree            = Arbre
 nav_Validate		= Validations
-nav_rdfTicker		= Ticker Rdf
+nav_rssTicker		= Ticker Rss
 nva_dataScroller    = DataScroller
 
 # buttons
