--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_fr.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_fr.properties
@@ -23,7 +23,7 @@ nav_dataList        = Listes dynamiques
 nav_tree            = Arbre
 nav_Validate		= Validations
 nav_rssTicker		= Ticker Rss
-nva_dataScroller    = DataScroller
+nav_dataScroller    = DataScroller
 
 # buttons
 
