--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
@@ -23,7 +23,7 @@ nav_dataList        = Dynamische Listen
 nav_tree            = Baum
 nav_Validate		= Validierungen
 nav_rssTicker		= RssTicker
-nva_dataScroller    = DataScroller
+nav_dataScroller    = DataScroller
 
 # buttons
 
