--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -3,7 +3,7 @@ MyFaces Release Notes
 
 ----------------------------------------------------------------------
 Changes in Release 1.0.6 beta
-
+* bug #979038 jsCookMenu component does not create dummyForm
 
 ----------------------------------------------------------------------
 Changes in Release 1.0.5 beta
