--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -4,6 +4,8 @@ MyFaces Release Notes
 ----------------------------------------------------------------------
 Changes in Release 1.0.6 beta
 * bug #979038 jsCookMenu component does not create dummyForm
+* bug #979039 default-values for ConvertNumberTag and ConvertDateTimeTag
+* changed build.xml - now myfaces-components are shipped via bin-distribution
 
 ----------------------------------------------------------------------
 Changes in Release 1.0.5 beta
