--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -4,6 +4,7 @@ MyFaces Release Notes
 ----------------------------------------------------------------------
 Changes in Release 1.0.6 beta
 * switch to apache license
+* bug #990395 myfaces.jar has bad taglib descriptor
 * bug #990302 Navigation-Rule redirect
 * bug #985274 f:view locale does not always work
 * bug #978654 Input hidden value of null being converted to zero
