encode javascript strings for jscook menu labels
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167045 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_fr.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_fr.properties
@@ -2,7 +2,7 @@ welcome = Bienvenue à
 today = Aujourd''hui, le {0,date,short}.
 
 
-nav_Home            = Pade d''acceuil
+nav_Home            = Pade d'acceuil
 nav_Examples        = Exemples
 nav_Sample_1        = Exemple 1
 nav_Sample_2        = Exemple 2
