fix #991234: use hidden field name in link url
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167053 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/release-notes.txt
+++ b/doc/release-notes.txt
@@ -4,6 +4,7 @@ MyFaces Release Notes
 ----------------------------------------------------------------------
 Changes in Release 1.0.6 beta
 * switch to apache license
+* bug #991234 command links not working with javascript disabled
 * bug #990395 myfaces.jar has bad taglib descriptor
 * bug #990302 Navigation-Rule redirect
 * bug #985274 f:view locale does not always work
