fix #992668: added int attribute + selectOneMenu to test
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167060 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_fr.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_fr.properties
@@ -66,6 +66,7 @@ radio_hint = Ce radio est une extension de myfaces, vous pouvez y intégrer de l'
 sort_cartype = Type de voiture
 sort_carcolor = Couleur
 sales_tax = Taxe
+doors=DOORS?
 
 label_country_name = Pays
 label_country_iso = Code Iso
