--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
@@ -66,6 +66,7 @@ radio_hint = This Radio is a myfaces extension - you can use html code here!
 sort_cartype = Typ
 sort_carcolor = Farbe
 sales_tax = Mehrwertsteuer
+Doors=Türen
 
 label_country_name = Land
 label_country_iso = Iso-Code
