--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_fr.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_fr.properties
@@ -66,7 +66,7 @@ radio_hint = Ce radio est une extension de myfaces, vous pouvez y intégrer de l'
 sort_cartype = Type de voiture
 sort_carcolor = Couleur
 sales_tax = Taxe
-doors=DOORS?
+doors = Portes
 
 label_country_name = Pays
 label_country_iso = Code Iso
