i18n for <x:inputDate/>-component
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167069 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_fr.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_fr.properties
@@ -24,6 +24,8 @@ nav_tree            = Arbre
 nav_Validate		= Validations
 nav_rdfTicker		= Ticker Rdf
 nva_dataScroller    = DataScroller
+nav_Date			= TODO: Translate Date
+
 
 # buttons
 
@@ -78,3 +80,11 @@ dataList_ul = Liste non ordonnée
 dataList_ol = Liste ordonnée
 
 dataScroller_pages = Page {0} / {1}
+date_comp_header=TODO/Translate Date input tag
+date_comp_text1=TODO/Translate Gimme a date
+date_comp_text2=TODO/Translate Date is:
+date_comp_text3=TODO/Translate Gimme a time
+date_comp_text4=TODO/Translate Time is:
+date_comp_text5=TODO/Translate Gimme a date & time
+date_comp_text6=TODO/Translate Date time is:
+date_comp_button=TODO/Translate Update
