--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
@@ -24,6 +24,7 @@ nav_tree            = Baum
 nav_Validate		= Validierungen
 nav_rssTicker		= RssTicker
 nav_dataScroller    = DataScroller
+nav_Date			= Datum
 
 # buttons
 
@@ -78,3 +79,11 @@ dataList_ul = Unsortierte Liste
 dataList_ol = Nummerierte Liste
 
 dataScroller_pages = Seite {0} / {1}
+date_comp_header=Datumskomponente
+date_comp_text1=Geben Sie ein Datum an
+date_comp_text2=Das Datum ist:
+date_comp_text3=Geben Sie eine Uhrzeit an
+date_comp_text4=Die Uhrzeit ist:
+date_comp_text5=Geben Sie Datum und Uhrzeit an
+date_comp_text6=Datum und Uhrzeit:
+date_comp_button=Aktualisieren
