Include inputDate error messages
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167070 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/myfaces/javax/faces/Messages.properties
+++ b/src/myfaces/javax/faces/Messages.properties
@@ -116,3 +116,6 @@ net.sourceforge.myfaces.Creditcard.INVALID_detail ="{0}": Value is not a correct
 
 net.sourceforge.myfaces.Regexpr.INVALID=Validation Error
 net.sourceforge.myfaces.Regexpr.INVALID_detail="{0}": Value is not valid.
+
+net.sourceforge.myfaces.Date.INVALID = Validation Error
+net.sourceforge.myfaces.Date.INVALID_detail ="{0}": Value is not a correct date
