--- a/src/myfaces/javax/faces/Messages_de.properties
+++ b/src/myfaces/javax/faces/Messages_de.properties
@@ -114,5 +114,8 @@ net.sourceforge.myfaces.Equal.INVALID_detail ="{0}": Eingegebener Wert ist nicht
 net.sourceforge.myfaces.Creditcard.INVALID = Validierungsfehler
 net.sourceforge.myfaces.Creditcard.INVALID_detail ="{0}": Eingegebener Wert ist keine gültige Kreditkartenummer
 
-net.sourceforge.myfaces.Regexpr.INVALID=Validierungsfehler
-net.sourceforge.myfaces.Regexpr.INVALID_detail="{0}": Eingegebener Wert ist ungültig.
+net.sourceforge.myfaces.Regexpr.INVALID = Validierungsfehler
+net.sourceforge.myfaces.Regexpr.INVALID_detail ="{0}": Eingegebener Wert ist ungültig.
+
+net.sourceforge.myfaces.Date.INVALID = Validierungsfehler
+net.sourceforge.myfaces.Date.INVALID_detail ="{0}": Eingegebener Datum ist ungültig.
