--- a/src/myfaces/javax/faces/Messages_en.properties
+++ b/src/myfaces/javax/faces/Messages_en.properties
@@ -116,3 +116,6 @@ net.sourceforge.myfaces.Creditcard.INVALID_detail ="{0}": Value is not a correct
 
 net.sourceforge.myfaces.Regexpr.INVALID=Validation Error
 net.sourceforge.myfaces.Regexpr.INVALID_detail="{0}": Value is not valid.
+
+net.sourceforge.myfaces.Date.INVALID = Validation Error
+net.sourceforge.myfaces.Date.INVALID_detail ="{0}": Value is not a correct date
