--- a/src/myfaces/javax/faces/Messages_fr.properties
+++ b/src/myfaces/javax/faces/Messages_fr.properties
@@ -15,61 +15,61 @@
 # standard messages (Spec. 2.5.1.4)
 
 javax.faces.component.UIInput.CONVERSION        = Erreur de conversion
-javax.faces.component.UIInput.CONVERSION_detail = "{0}": Erreur durant la mise ï¿½ jour des donnï¿½es.
+javax.faces.component.UIInput.CONVERSION_detail = "{0}": Erreur durant la mise à jour des données.
 
 javax.faces.component.UIInput.REQUIRED        = Erreur de validation
-javax.faces.component.UIInput.REQUIRED_detail = "{0}": Une donnï¿½e est requise.
+javax.faces.component.UIInput.REQUIRED_detail = "{0}": Une donnée est requise.
 
 javax.faces.component.UISelectOne.INVALID        = Erreur de Validation
-javax.faces.component.UISelectOne.INVALID_detail = La donnï¿½e n''est pas une option valide.
+javax.faces.component.UISelectOne.INVALID_detail = La donnée n''est pas une option valide.
 
 javax.faces.component.UISelectMany.INVALID        = Erreur de Validation
-javax.faces.component.UISelectMany.INVALID_detail = La donnï¿½e n''est pas une option valide.
+javax.faces.component.UISelectMany.INVALID_detail = La donnée n''est pas une option valide.
 
 javax.faces.validator.NOT_IN_RANGE        = Erreur de Validation
-javax.faces.validator.NOT_IN_RANGE_detail = "{2}": La donnï¿½e n''est pas comprise entre {0} et {1}.
+javax.faces.validator.NOT_IN_RANGE_detail = "{2}": La donnée n''est pas comprise entre {0} et {1}.
 
 javax.faces.validator.DoubleRangeValidator.LIMIT        = Erreur de Validation
-javax.faces.validator.DoubleRangeValidator.LIMIT_detail = La donnï¿½e ne peut ï¿½tre convertie dans le bon type.
+javax.faces.validator.DoubleRangeValidator.LIMIT_detail = La donnée ne peut étre convertie dans le bon type.
 
 javax.faces.validator.DoubleRangeValidator.MAXIMUM        = Erreur de Validation
-javax.faces.validator.DoubleRangeValidator.MAXIMUM_detail = "{1}": La donnï¿½e est supï¿½rieur au maximum authorisï¿½ de ''{0}''.
+javax.faces.validator.DoubleRangeValidator.MAXIMUM_detail = "{1}": La donnée est supérieur au maximum authorisé de ''{0}''.
 
 javax.faces.validator.DoubleRangeValidator.MINIMUM        = Erreur de Validation
-javax.faces.validator.DoubleRangeValidator.MINIMUM_detail = "{1}": La donnï¿½e est infï¿½rieur au maximum authorisï¿½ de ''{0}''.
+javax.faces.validator.DoubleRangeValidator.MINIMUM_detail = "{1}": La donnée est inférieur au maximum authorisé de ''{0}''.
 
 javax.faces.validator.DoubleRangeValidator.TYPE        = Erreur de Validation
-javax.faces.validator.DoubleRangeValidator.TYPE_detail = "{0}": La donnï¿½e n''est pas du bon type.
+javax.faces.validator.DoubleRangeValidator.TYPE_detail = "{0}": La donnée n''est pas du bon type.
 
 javax.faces.validator.LengthValidator.LIMIT        = Erreur de Validation
-javax.faces.validator.LengthValidator.LIMIT_detail = La donnï¿½e ne peut ï¿½tre convertie dans le bon type.
+javax.faces.validator.LengthValidator.LIMIT_detail = La donnée ne peut étre convertie dans le bon type.
 
 javax.faces.validator.LengthValidator.MAXIMUM        = Erreur de Validation
-javax.faces.validator.LengthValidator.MAXIMUM_detail = "{1}": La donnï¿½e a plus que les {0} caractï¿½res maximum authorisï¿½s.
+javax.faces.validator.LengthValidator.MAXIMUM_detail = "{1}": La donnée a plus que les {0} caractéres maximum authorisés.
 
 javax.faces.validator.LengthValidator.MINIMUM        = Erreur de Validation
-javax.faces.validator.LengthValidator.MINIMUM_detail = "{1}": La donnï¿½e a moins que les {0} caractï¿½res maximum requis.
+javax.faces.validator.LengthValidator.MINIMUM_detail = "{1}": La donnée a moins que les {0} caractéres maximum requis.
 
 javax.faces.validator.LongRangeValidator.LIMIT        = Erreur de Validation
-javax.faces.validator.LongRangeValidator.LIMIT_detail = La donnï¿½e ne peut ï¿½tre convertie dans le bon type.
+javax.faces.validator.LongRangeValidator.LIMIT_detail = La donnée ne peut étre convertie dans le bon type.
 
 javax.faces.validator.LongRangeValidator.MAXIMUM        = Erreur de Validation
-javax.faces.validator.LongRangeValidator.MAXIMUM_detail = "{1}": La donnï¿½e est supï¿½rieur au maximum authorisï¿½ de ''{0}''.
+javax.faces.validator.LongRangeValidator.MAXIMUM_detail = "{1}": La donnée est supérieur au maximum authorisé de ''{0}''.
 
 javax.faces.validator.LongRangeValidator.MINIMUM        = Erreur de Validation
-javax.faces.validator.LongRangeValidator.MINIMUM_detail = "{1}": La donnï¿½e est infï¿½rieur au maximum authorisï¿½ de ''{0}''.
+javax.faces.validator.LongRangeValidator.MINIMUM_detail = "{1}": La donnée est inférieur au maximum authorisé de ''{0}''.
 
 javax.faces.validator.LongRangeValidator.TYPE        = Erreur de Validation
-javax.faces.validator.LongRangeValidator.TYPE_detail = "{0}": La donnï¿½e n''est pas du bon type.
+javax.faces.validator.LongRangeValidator.TYPE_detail = "{0}": La donnée n''est pas du bon type.
 
 
 # additional messages (not specified, but supported by myfaces API converters)
 
 javax.faces.convert.BigDecimalConverter.CONVERSION        = Erreur de conversion
-javax.faces.convert.BigDecimalConverter.CONVERSION_detail = La donnï¿½e n''est pas un nombre valide.
+javax.faces.convert.BigDecimalConverter.CONVERSION_detail = La donnée n''est pas un nombre valide.
 
 javax.faces.convert.BigIntegerConverter.CONVERSION        = Erreur de conversion
-javax.faces.convert.BigIntegerConverter.CONVERSION_detail = La donnï¿½e n''est pas un nombre valide.
+javax.faces.convert.BigIntegerConverter.CONVERSION_detail = La donnée n''est pas un nombre valide.
 
 javax.faces.convert.BooleanConverter.CONVERSION        = Erreur de conversion
 javax.faces.convert.BooleanConverter.CONVERSION_detail = Conversion de '{0}' en Boolean impossible.
@@ -78,28 +78,28 @@ javax.faces.convert.ByteConverter.CONVERSION        = Erreur de conversion
 javax.faces.convert.ByteConverter.CONVERSION_detail = Conversion de '{0}' en Octet impossible.
 
 javax.faces.convert.CharacterConverter.CONVERSION        = Erreur de conversion
-javax.faces.convert.CharacterConverter.CONVERSION_detail = Conversion de '{0}' en Caractï¿½re impossible.
+javax.faces.convert.CharacterConverter.CONVERSION_detail = Conversion de '{0}' en Caractère impossible.
 
 javax.faces.convert.DateTimeConverter.CONVERSION        = Erreur de conversion
 javax.faces.convert.DateTimeConverter.CONVERSION_detail = "{1}": Conversion de '{0}' en Date/Heure impossible.
 
 javax.faces.convert.DoubleConverter.CONVERSION        = Erreur de conversion
-javax.faces.convert.DoubleConverter.CONVERSION_detail = "{0}": La donnï¿½e n''est pas un nombre valide.
+javax.faces.convert.DoubleConverter.CONVERSION_detail = "{0}": La donnée n''est pas un nombre valide.
 
 javax.faces.convert.FloatConverter.CONVERSION        = Erreur de conversion
-javax.faces.convert.FloatConverter.CONVERSION_detail = "{0}": La donnï¿½e n''est pas un nombre valide.
+javax.faces.convert.FloatConverter.CONVERSION_detail = "{0}": La donnée n''est pas un nombre valide.
 
 javax.faces.convert.IntegerConverter.CONVERSION        = Erreur de conversion
-javax.faces.convert.IntegerConverter.CONVERSION_detail = "{0}": La donnï¿½e n''est pas un nombre valide.
+javax.faces.convert.IntegerConverter.CONVERSION_detail = "{0}": La donnée n''est pas un nombre valide.
 
 javax.faces.convert.LongConverter.CONVERSION        = Erreur de conversion
-javax.faces.convert.LongConverter.CONVERSION_detail = "{0}": La donnï¿½e n''est pas un nombre valide.
+javax.faces.convert.LongConverter.CONVERSION_detail = "{0}": La donnée n''est pas un nombre valide.
 
 javax.faces.convert.NumberConverter.CONVERSION        = Erreur de conversion
-javax.faces.convert.NumberConverter.CONVERSION_detail = "{0}": La donnï¿½e n''est pas un nombre valide.
+javax.faces.convert.NumberConverter.CONVERSION_detail = "{0}": La donnée n''est pas un nombre valide.
 
 javax.faces.convert.ShortConverter.CONVERSION        = Erreur de conversion
-javax.faces.convert.ShortConverter.CONVERSION_detail = "{0}": La donnï¿½e n''est pas un nombre valide.
+javax.faces.convert.ShortConverter.CONVERSION_detail = "{0}": La donnée n''est pas un nombre valide.
 
 
 # myfaces specific messages
@@ -109,10 +109,13 @@ net.sourceforge.myfaces.Email.INVALID = Erreur de Validation
 net.sourceforge.myfaces.Email.INVALID_detail = "{0}": Cette valeur n'est pas une adresse email correcte.
 
 net.sourceforge.myfaces.Equal.INVALID = Erreur de Validation
-net.sourceforge.myfaces.Equal.INVALID_detail ="{0}": TODO/TRANSLATE: Value is not equal with value of "{1}".
+net.sourceforge.myfaces.Equal.INVALID_detail ="{0}": Cette valeur n'est pas égale à "{1}".
 
 net.sourceforge.myfaces.Creditcard.INVALID = Erreur de Validation
-net.sourceforge.myfaces.Creditcard.INVALID_detail = "{0}": Cette valeur n'est pas un numï¿½ro de carte de crï¿½dit correcte.
+net.sourceforge.myfaces.Creditcard.INVALID_detail = "{0}": Cette valeur n'est pas un numéro de carte de crédit correcte.
 
 net.sourceforge.myfaces.Regexpr.INVALID = Erreur de Validation
 net.sourceforge.myfaces.Regexpr.INVALID_detail = "{0}": Valeur non valide.
+
+net.sourceforge.myfaces.Date.INVALID = Erreur de Validation
+net.sourceforge.myfaces.Date.INVALID_detail ="{0}": Date non valide.
