--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_fr.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_fr.properties
@@ -80,11 +80,11 @@ dataList_ul = Liste non ordonnée
 dataList_ol = Liste ordonnée
 
 dataScroller_pages = Page {0} / {1}
-date_comp_header=TODO/Translate Date input tag
-date_comp_text1=TODO/Translate Gimme a date
-date_comp_text2=TODO/Translate Date is:
-date_comp_text3=TODO/Translate Gimme a time
-date_comp_text4=TODO/Translate Time is:
-date_comp_text5=TODO/Translate Gimme a date & time
-date_comp_text6=TODO/Translate Date time is:
-date_comp_button=TODO/Translate Update
+date_comp_header=Tag input Date
+date_comp_text1=Entrez une date
+date_comp_text2=La date est :
+date_comp_text3=Entrez une heure
+date_comp_text4=L'heure est
+date_comp_text5=Entre la date et l'heure
+date_comp_text6=La date et l'heure sont :
+date_comp_button=Mise à jour
