calendar; revisited again for complete i18
git-svn-id: https://svn.apache.org/repos/asf/myfaces/trunk@167086 13f79535-47bb-0310-9956-ffa450edef68

--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_de.properties
@@ -87,3 +87,5 @@ date_comp_text4=Die Uhrzeit ist:
 date_comp_text5=Geben Sie Datum und Uhrzeit an
 date_comp_text6=Datum und Uhrzeit:
 date_comp_button=Aktualisieren
+popup_today_string=Heute ist :
+popup_week_string=KW
