--- a/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_fr.properties
+++ b/webapps/examples/src/net/sourceforge/myfaces/examples/resource/example_messages_fr.properties
@@ -88,3 +88,5 @@ date_comp_text4=L'heure est
 date_comp_text5=Entre la date et l'heure
 date_comp_text6=La date et l'heure sont :
 date_comp_button=Mise à jour
+popup_today_string=Aujourd'hui, le :
+popup_week_string=Sem.
